# lastsignal

./: BACKGROUND.md  Cargo.nix  Cargo.toml  README.md  TODO  config.toml
.claude/: settings.local.json
examples/: config.toml  last_signal_message.txt
src/: app.rs  config.rs  duration_parser.rs  main.rs  message_adapter.rs  oauth.rs  state.rs
src/outputs/: bidirectional.rs  email.rs  email_bidirectional.rs  facebook_messenger.rs  mod.rs  whoop.rs
