[package]
name = "lastsignal"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
